--- a/index.ipynb
+++ b/index.ipynb
@@ -92,12 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    return travel_destinations"
+    "    return travel_destinations[0]"
    ]
   },
   {
