Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,14 +151,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    return travel_destinations.append(-1, 'madagascar')\n",
-    "    pass"
+    "    return travel_destinations.append(-1, 'madagascar')\n"
    ]
   },
   {
