--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    return travel_destinations.append(-1, 'madagascar')\n"
+    "    return travel_destinations.append('madagascar')\n",
+    "    \n"
    ]
   },
   {
