--- a/index.ipynb
+++ b/index.ipynb
@@ -158,6 +158,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    travel_destinations.append('madagascar')\n",
+    "    return travel_destination\n",
     "    \n"
    ]
   },
