--- a/index.ipynb
+++ b/index.ipynb
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    travel_destinations.append('madagascar')\n",
-    "    return travel_destinations[-1]\n",
+    "    return travel_destinations.append[-1]\n",
     "    \n"
    ]
   },
