Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,10 @@
     "def favorite_destination():\n",
     "    travel_destinations.append('madagascar')\n",
     "    return travel_destinations[-1]\n",
-    "    \n"
+    "    \n",
+    "    \n",
+    "    travel_destinations.append('madagascar')\n",
+    "    return travel_destinations[-1]\n"
    ]
   },
   {
