--- a/index.ipynb
+++ b/index.ipynb
@@ -198,8 +198,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "favorite_destination()\n",
-    "\n",
-    "travel_destinations[-1] # 'madagascar'"
+    "travel_destinations[-1] # 'madagascar'\n",
+    "\n"
    ]
   },
   {
