--- a/index.ipynb
+++ b/index.ipynb
@@ -229,9 +229,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    \n",
-    "    \n",
-    "    "
+    "    return \n",
+    "\n"
    ]
   },
   {
