--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    return \n",
+    "    return travel_destina\n",
     "\n"
    ]
   },
