Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalized destinations = []\n",
-    "    for capitalize in capitalized destinations\n",
+    "    for dest in capitalized destinations\n",
     "\n"
    ]
   },
