Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,6 +231,7 @@
     "def capitalize_countries():\n",
     "    capitalized destinations = []\n",
     "    for destination in travel_destinations:\n",
+    "        capitalized\n",
     "\n"
    ]
   },
