Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,9 +229,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalized destinations = []\n",
+    "    capitalized_destinations = []\n",
     "    for destination in travel_destinations:\n",
-    "        capitalized\n",
+    "        capitalized_destinations()\n",
     "\n"
    ]
   },
