--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
     "def capitalize_countries():\n",
     "    capitalized_destinations = []\n",
     "    for destination in travel_destinations:\n",
-    "        capitalized_destinations(titile)\n",
+    "        capitalized_destinations()\n",
     "\n"
    ]
   },
