--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,8 @@
     "def capitalize_countries():\n",
     "    capitalized_destinations = []\n",
     "    for destination in travel_destinations:\n",
-    "        capitalized_destinations.append()\n",
+    "        capitalized_destinations.append(destination.title)\n",
+    "        return \n",
     "\n"
    ]
   },
