Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
     "def capitalize_countries():\n",
     "    capitalized_destinations = []\n",
     "    for destination in travel_destinations:\n",
-    "        capitalized_destinations.append(destination.title)\n",
+    "        capitalized_destinations.append(destination.capitalized)\n",
     "        return capitalized_destinations\n",
     "\n"
    ]
