Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -246,10 +246,10 @@
     {
      "data": {
       "text/plain": [
-       "[<function str.title>]"
+       "['Argentina']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
