Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,16 +231,16 @@
     "def capitalize_countries():\n",
     "    capitalized_destinations = []\n",
     "    for destination in travel_destinations:\n",
-    "        capitalized_destinations.append(destination.title())\n",
+    "        capitalized_destinations.append(destination.capitalize())\n",
     "        return capitalized_destinations\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "['Argentina']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
