Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -232,7 +232,7 @@
     "    capitalized_destinations = []\n",
     "    for destination in travel_destinations:\n",
     "        capitalized_destinations.append(destination.capitalize())\n",
-    "        return capitalized_destinations\n",
+    "        return\n",
     "\n"
    ]
   },
