Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,13 +232,13 @@
     "    capitalized_destinations = []\n",
     "    for destination in travel_destinations:\n",
     "        capitalized_destinations.append(destination.capitalize())\n",
-    "        return\n",
+    "        return capitalize_countries\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {
     "scrolled": false
    },
@@ -246,10 +246,10 @@
     {
      "data": {
       "text/plain": [
-       "['Argentina']"
+       "<function __main__.capitalize_countries()>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
